# hpmpc

./: .gitignore  CMakeLists.txt  Makefile  Makefile.rule
include/: target.h
lqcp_solvers/: d_back_ric_rec_libstr.c
mpc_solvers/: d_ip2_res_hard.c  d_ip2_res_hard_libstr.c
mpc_solvers/c99/: d_aux_ip_hard_libstr.c  d_res_ip_res_hard_libstr.c
